# xtensor-fmt

./: .gitignore  .pre-commit-config.yaml  LICENSE  meson.build  meson_options.txt  pixi.toml  readme.org
CppCore/: meson.build  tiny_cli.cpp
CppCore/xtensor-fmt/: misc.hpp  xarray.hpp  xtensor.hpp  xview.hpp
